# codeviz

./: .gitignore  CMakeLists.txt  README.md  analyse_assignments.py  analyse_functions.py  analyse_functions_scoped.py  analyse_includes.py  build_graph.py  byggern_project_config.cnf  c_parser.py  c_tokenizer.py  compile_project.py  data_flow.py  data_flow_v2.py  global_utilities.py  includepathtests.py  main.py  parsefile.py  parser.out  parsetab.py  ply_classes.py  ply_parser.py  ply_project.py  ply_tokenizer.py  template_config.cnf
c_grammar/: c_constants.txt  c_function_kw.txt  c_functions.txt  c_keywords.txt
include/: includepathfinder.h  tokenizer.h
include/datanodes/: datanodetypes.h
include/file_mgmt/: filedeleter.h  filefinder.h  fileopener.h  filewriter.h
include/lexparse/: tokenizer.h  tokenizer_ripped.h
include/parser/: fileparser.h  parsernodetypes.h  projectparser.h
include/parsernodes/: parsernodetypes.h
logfiles/: log_find_function_calls.txt  log_find_function_defs.txt  log_find_includes.txt
logfiles/tokenizer_output/: CAN_driver.c.txt  CAN_driver.h.txt  MCP2515_driver.c.txt  MCP2515_driver.h.txt  OLED_driver.c.txt  OLED_driver.h.txt  SPI_driver.c.txt  SPI_driver.h.txt  UART_driver.c.txt  UART_driver.h.txt  adc_driver.c.txt  adc_driver.h.txt  can_controller.c.txt  can_controller.h.txt  can_interrupt.c.txt  can_interrupt.h.txt  dacc_driver.c.txt  dacc_driver.h.txt  includes.h.txt  joystick_can.c.txt  joystick_can.h.txt  main.c.txt  mcp2515.h.txt  menu.c.txt  menu.h.txt  misc.c.txt  (+13 more)
src/: includepathfinder.cpp  main.cpp  tokenizer.cpp
(+8 files in other folders)
